# esp-usb-bridge

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  UsbBridgeJTag.sln  UsbBridgeJTag.vgdbproj  config.h  esp_err.h  esp_log.h  freertos_hooks.c  jtag.c  jtag.h  jtag.pio  main.c  make_packages.sh  msc.c  msc.h  serial.c  serial.h  tusb_config.h  ubp_config.h  uncrustify.cfg  uncrustify_files.txt  usb_descriptors.c  usb_descriptors.h
components/esp_loader/: CMakeLists.txt  idf_component.yml
components/esp_loader/include/: esp_loader.h  serial_io.h
components/esp_loader/port/: esp32_port.c  esp32_port.h  raspberry_port.c  raspberry_port.h  rp2040_port.c  rp2040_port.h  stm32_port.c  stm32_port.h
components/esp_loader/private_include/: esp_targets.h  md5_hash.h  serial_comm_prv.h
components/esp_loader/src/: esp_loader.c  esp_targets.c  md5_hash.c  serial_comm.c
components/esp_loader/test/: serial_io_mock.h
pio_uart_logger/: pio_uart_logger.c  pio_uart_logger.h  uart_tx.pio
ws2812/: ws2812.c  ws2812.h
